@@ -592,12 +592,12 @@ class InstallRemovePane(gtk.VBox):
 
         button_apply = image_stock_button(gtk.STOCK_APPLY, _('_Apply') )
         button_apply.connect('clicked', self.__apply_button_clicked)
-        button_quick_setup = gtk.Button(_('Start quick setup'))
-        button_quick_setup.connect('clicked', self.__launch_quick_setup)
+#        button_quick_setup = gtk.Button(_('Start quick setup'))
+#        button_quick_setup.connect('clicked', self.__launch_quick_setup)
         bottom_box = gtk.HBox(False, 10)
         bottom_box.pack_start(button_apply, False, False)
-        if Config.is_Ubuntu() or Config.is_Mint():
-            bottom_box.pack_end(button_quick_setup, False, False)
+#        if Config.is_Ubuntu() or Config.is_Mint():
+#            bottom_box.pack_end(button_quick_setup, False, False)
 
         box2 = gtk.VBox(False, 0)
         align = gtk.Alignment(0)
@@ -721,9 +721,22 @@ class InstallRemovePane(gtk.VBox):
             if not i3 in all_categories: continue
             item = [i1, icon(i2), i3]
             treestore.append(parent, item)
+        
+        quick_setup_pane = gtk.HBox(False, 0)
+        quick_setup_button = image_file_button(_('Start quick setup'), D + 'other_icons/quicksetup.png', 32)
+        quick_setup_button.connect('clicked', self.__launch_quick_setup)
+        quick_setup_checkbutton = gtk.CheckButton(_('Hide this button'))
+        def hide_quick_setup(w):
+            notify(_('Preferences changed'), _('Your changes will take effect at the next time when the program starts up.'))
+            Config.set_hide_quick_setup_pane(w.get_active())
+        quick_setup_checkbutton.connect('clicked', hide_quick_setup)
+        quick_setup_pane.pack_start(quick_setup_button, False)
+        quick_setup_pane.pack_start(quick_setup_checkbutton, False)
 
         self.__left_tree_view_default_select()
 
+        if not Config.get_hide_quick_setup_pane() and (Config.is_Ubuntu() or Config.is_Mint()):
+            self.pack_start(quick_setup_pane, False)
         self.pack_start(hpaned)
         self.show_all()
         self.load_state()
